--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.0.22",
     "recharts": "^2.13.0-alpha.4",
     "sonner": "^1.5.0",
