--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "fast-glob": "^3.3.2",
     "initials": "^3.1.2",
     "input-otp": "^1.2.4",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.411.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
